# cmake

./: .gitignore  CMakeLists.txt
src/: main.cpp  textQuery.cpp  textQuey.h  textResult.cpp  textResult.h
